# static_site_generator

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  index.html  pyproject.toml  requirements.txt  run_python_tests.sh  setup.cfg  ssg-config.json  ssg.py  text.py  the_adventure_of_the_six_napoleans.html  the_adventure_of_the_speckled_band.html  utils.py
.github/workflows/: actions.yml  release.yml
fast_ssg/: __main__.py  text.py  utils.py
ssg/: __init__.py  text.py  utils.py
tests/: text_test.py  utils_test.py
tests/test_files/: test_file.md  test_file2.md
