[metadata]
name = fast_ssg
version = 1.0.1
author = Andrei Batomunkuev
author_email = andreibatomunkuev@gmail.com
description = Fast Static Site Generator  - a tool for generating a complete HTML files from raw data like txt and markdown files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abatomunkuev/static_site_generator
project_urls =
    Bug Tracker = https://github.com/abatomunkuev/static_site_generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = fast_ssg
python_requires = >=3.6
install_requires =
    beautifulsoup4 == 4.10.0
[options.entry_points]
console_scripts =
    fast_ssg = fast_ssg.__main__:main